--- a/portfolioUsingFlexbox/index.css
+++ b/portfolioUsingFlexbox/index.css
@@ -50,7 +50,6 @@ section{
     color: #ffffff;
 }
 
-
 .container{
     display: flex;
     flex-wrap: wrap;
@@ -121,9 +120,13 @@ footer{
     background-color: #eeeeee;
 }
 
+#section3 h2{
+    margin-bottom: 30px;
+}
+
 textarea{
     height: 100px;
 }
 input:focus{
-    background-color:  #000000;  
+    background-color:  #cbcbcb;  
 }
