--- a/satupharmatechCloneUsingCSS/index.css
+++ b/satupharmatechCloneUsingCSS/index.css
@@ -15,6 +15,7 @@ header{
     align-items: center;
     border: 1px solid rgb(217, 217, 217);
     font-size: 20px;
+    padding: 1rem 3rem;
 }
 nav ul{
     display: flex;
@@ -25,14 +26,14 @@ nav ul{
 nav ul li{
     list-style-type: none;
 }
-nav ul li span{
-    color:  rgb(79 181 185 );
+ span{
+    color: rgb(20 184 166);
 }
-header button , .hero button{
+header button , .hero button , form button{
     font-size: 20px;
     padding: 0.5rem 1rem;
     border: none;
-    background-color: rgb(79 181 185 );
+    background-color:rgb(20 184 166);
     color: white;
     border-radius: 5px;
 }
@@ -91,6 +92,7 @@ header button , .hero button{
     right: 10vw;
     background-color: rgb(255 247 227);
     min-height: 7rem;
+    box-shadow: 0px 0px 5px 0px;
 }
 
 #sectionOne{
@@ -230,7 +232,79 @@ header button , .hero button{
     display: grid;
     grid-template-columns: auto auto;
     gap: 1rem;
-   
+}
+
+#sectionSix{
+    padding: 3rem;
+    text-align: right;
+    margin-top: 3rem;
+}
+
+#sectionSix h2{
+    font-size: 35px;
+    font-weight: 600;
+}
+
+
+
+#sectionSeven{
+    display: flex;
+    padding: 3rem;
+    justify-content: space-between;
+}
+#sectionSeven img{
+    width: 47%;
+    margin-left: 20px;
+}
+
+form , form div{
+    display: flex;
+    flex-direction: column;
+    align-content: space-evenly;
+    justify-content: space-evenly;
+    gap: 10px;
+}
+form{
+    width: -webkit-fill-available;;
+}
+
+form input{
+    height: 40px;
+}
+
+form button{
+    height: 50px;
+    font-size: 18px;
+}
+
+
+
+@media (max-width : 1177px){
+    .card{
+        display: block;
+    }
+
+    .card img{
+        width: 100% !important;
+        margin: 3rem auto;
+    }
+    #sectionSeven img{
+        display: none;
+    }
+}
+
+@media (max-width : 950px){
+
+    .sectionThreeBoxWrapper {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .card{
+        margin-bottom: 5rem;
+    }
+    .hero h1{
+        font-size: 35px;
+    }
 }
 
 @media (max-width : 700px) {
@@ -242,5 +316,31 @@ header button , .hero button{
     }
     header button {
         display: none;
+    }
+    .hero p{
+        display: none;
+
+    }
+    .hero h1{
+        text-align: center;
+    }
+    .hero{
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+    
+    }
+    .sectionThreeBoxWrapper {
+        grid-template-columns: 1fr ;
+    }
+
+    .sectionThreeBoxWrapper h3{
+        margin-bottom: 10rem;
+    }
+    .sectionThreeBox{
+        padding: 30px;
+    }
+    .sectionOneWrapper {
+        background-position-x: left;
     }
 }
