--- a/satupharmatechCloneUsingCSS/index.css
+++ b/satupharmatechCloneUsingCSS/index.css
@@ -4,7 +4,7 @@
     font-family: 'Poppins'
 }
 
-
+/* for fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
@@ -40,6 +40,7 @@ header button , .hero button , form button{
     border-radius: 5px;
 }
 
+/* For transition effect */
 button{
     transition: all 0.5s;
     cursor: pointer;
@@ -104,7 +105,7 @@ button:hover{
     right: 10vw;
     background-color: rgb(255 247 227);
     min-height: 7rem;
-    box-shadow: 0px 0px 5px 0px;
+    box-shadow: 0px 0px 11px 0px #909090
     font-size: 20px;
     font-style: italic;
 }
@@ -391,5 +392,9 @@ form button{
 @media (max-width : 500px){
     section{
         padding: 10px !important;
+       
+    }
+    #sectionTwo {
+        margin: 10rem 1rem 0 1rem;
     }
 }
